@@ -252,7 +252,11 @@ a.list-group-item:hover {
 /* ------------------ BREADCRUMB ------------------- */
 
 .breadcrumb {
-	box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.3), inset 0px -2px 0px rgba(0, 0, 0, 0.2);
+  border-color:rgba(0,0,0,0.3);
+  border-width:1px;
+  background-color:#eeeeec;
+  margin-bottom:1.2em;
 }
 
 /* ------------------ PARTAGE RESEAUX SOCIAUX ------------------- */
