@@ -22,6 +22,8 @@
 
   - New style for alerts
 
+  - New style for breadcrumb
+
 - New Palette based on a work by Tobias Bernard for the Fractal application
 
   - Color that aren't based on semantics
